@startuml
'https://plantuml.com/class-diagram

abstract class BaseObject{
    # class
    # position
}

abstract class BuiltInObject
class Object
BaseObject <|-- Object
BaseObject <|-- BuiltInObject

abstract class BaseFunction{
    # args: std::vector<ObjAssignNode*>
    # funName

    + checkArgs(args: std::vector<Object*>): bool
}
class Float
class Integer
class List
class None
class String
BuiltInObject <|-- BaseFunction
BuiltInObject <|-- Float
BuiltInObject <|-- Integer
BuiltInObject <|-- List
BuiltInObject <|-- None
BuiltInObject <|-- String

class BuiltInFunction{
    # fun: std::function<Object*(const std::vector<Object*> &)>
}

class Function{
    # environment
    # body: Node*
}

BaseFunction <|-- BuiltInFunction
BaseFunction <|-- Function

@enduml